# project-k-tally-mock-api

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  pyproject.toml  tally_simulator.spec
backend/: __main__.py  config.py  database.py  main.py
backend/api/: data_routes.py  emulator_routes.py  health_routes.py  simulation_routes.py  tdml_routes.py
backend/emulator/: app.py  json_handler.py  state.py  xml_handler.py
backend/models/: __init__.py  company.py  cost_center.py  ledger.py  simulation.py  stock.py  sync_state.py  voucher.py
backend/simulator/: company_gen.py  engine.py  guid_factory.py  ledger_gen.py  schemas.py  seasonality.py  sector_templates.py  stock_gen.py  voucher_gen.py
backend/tdml/: encoding.py  request_parser.py  response_builder.py
backend/tdml/exporters/: company_export.py  ledger_export.py  stock_export.py  voucher_export.py
docs/: backend-integration-spec.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/api/: client.ts
frontend/src/components/: DataPreview.tsx  EmulatorPanel.tsx  SimulationForm.tsx  SimulationList.tsx  StatusPanel.tsx
frontend/src/types/: simulation.ts
installer/: setup.iss
scripts/: build_exe.bat
